--- a/static/style.page.faq.css
+++ b/static/style.page.faq.css
@@ -32,6 +32,7 @@
     padding-left: 30px;
 }
 .list-item:hover {
+    background-color: #b16dfe;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 .list-number {
